# ai-python-rag-langchain

./: .gitignore  pyproject.toml  readme.md  requirements.txt
scripts/: chat.py  ingest.py
src/rag/: chain.py  config.py  embeddings.py  llm.py  loaders.py  vectorstore.py
